--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             if (isDarkMode) {
                 element.className = "dark-mode";
-                modeIcon.src = "icons/sun_darkmode.png";
+                modeIcon.src = "./icons/sun_darkmode.png";
                 lightModeIcon.style.display = "none";
                 darkModeIcon.style.display = "block";
                 links.forEach(link => {
@@ -70,7 +70,7 @@
                 });
             } else {
                 element.className = "light-mode";
-                modeIcon.src = "icons/moon_lightmode.png";
+                modeIcon.src = "./icons/moon_lightmode.png";
                 lightModeIcon.style.display = "block";
                 darkModeIcon.style.display = "none";
                 links.forEach(link => {
@@ -94,7 +94,7 @@
     <body>
         <button onclick="toggleMode()" class="icon-light">
             <span class="icon-light">
-                <img id="mode-icon-img" src="icons/moon_lightmode.png" width="25" height="25">
+                <img id="mode-icon-img" src="./icons/moon_lightmode.png" width="25" height="25">
             </span>
         </button>
         
@@ -127,7 +127,7 @@
                     <a href = "https://github.com/airimatt" target="_blank">
                     <img src="icons/github-mark-white.png" width = "27" height = "27"></a>
                     <a href="https://www.linkedin.com/in/airi-matsushita-774bb6244/" target="_blank">
-                    <img src="icons/icons8-linkedin-96 (1).png" width="32" height="32"></a>
+                    <img src="icons/icons8-linkedin-96-white.png" width="32" height="32"></a>
                 </div>
             </span>
         </div>
