--- a/index.html
+++ b/index.html
@@ -116,18 +116,18 @@
                     <img src = "https://img.icons8.com/fluency-systems-regular/48/new-post.png"
                         width = "32" height = "32"></a>
                     <a href = "https://github.com/airimatt" target="_blank">
-                    <img src="github-mark.png" width = "27" height = "27"></a>
+                    <img src="./github-mark.png" width = "27" height = "27"></a>
                     <a href = "https://www.linkedin.com/in/airi-matsushita-774bb6244/" target="_blank">
-                    <img src="icons8-linkedin-96.png"
+                    <img src="./icons8-linkedin-96.png"
                         width = "32" height = "32"></a>
                 </div>
                 <div id="darkModeIcon" style="display: none;">
                     <a href = "mailto: airi.matsushita@tufts.edu" target="_blank">
                     <img src="icons/icons8-email-48.png" width = "32" height = "32"></a>
                     <a href = "https://github.com/airimatt" target="_blank">
-                    <img src="github-mark-white.png" width = "27" height = "27"></a>
+                    <img src="./github-mark-white.png" width = "27" height = "27"></a>
                     <a href="https://www.linkedin.com/in/airi-matsushita-774bb6244/" target="_blank">
-                    <img src="icons8-linkedin-96-white.png" width="32" height="32"></a>
+                    <img src="./icons8-linkedin-96-white.png" width="32" height="32"></a>
                 </div>
             </span>
         </div>
