--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             if (isDarkMode) {
                 element.className = "dark-mode";
-                modeIcon.src = "sun_darkmode.png";
+                modeIcon.src = "sun_darkmode.PNG";
                 lightModeIcon.style.display = "none";
                 darkModeIcon.style.display = "block";
                 links.forEach(link => {
@@ -70,7 +70,7 @@
                 });
             } else {
                 element.className = "light-mode";
-                modeIcon.src = "moon_lightmode.png";
+                modeIcon.src = "moon_lightmode.PNG";
                 lightModeIcon.style.display = "block";
                 darkModeIcon.style.display = "none";
                 links.forEach(link => {
