--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <body>
         <button onclick="toggleMode()" class="icon-light">
             <span class="icon-light">
-                <img id="mode-icon-img" src="moon_lightmode.png" width="25" height="25">
+                <img id="mode-icon-img" src="moon_lightmode.PNG" width="25" height="25">
             </span>
         </button>
         
@@ -116,18 +116,18 @@
                     <img src = "https://img.icons8.com/fluency-systems-regular/48/new-post.png"
                         width = "32" height = "32"></a>
                     <a href = "https://github.com/airimatt" target="_blank">
-                    <img src="./github-mark.png" width = "27" height = "27"></a>
+                    <img src="github-mark.PNG" width = "27" height = "27"></a>
                     <a href = "https://www.linkedin.com/in/airi-matsushita-774bb6244/" target="_blank">
-                    <img src="./icons8-linkedin-96.png"
+                    <img src="icons8-linkedin-96.PNG"
                         width = "32" height = "32"></a>
                 </div>
                 <div id="darkModeIcon" style="display: none;">
                     <a href = "mailto: airi.matsushita@tufts.edu" target="_blank">
-                    <img src="icons/icons8-email-48.png" width = "32" height = "32"></a>
+                    <img src="icons/icons8-email-48.PNG" width = "32" height = "32"></a>
                     <a href = "https://github.com/airimatt" target="_blank">
-                    <img src="./github-mark-white.png" width = "27" height = "27"></a>
+                    <img src="github-mark-white.PNG" width = "27" height = "27"></a>
                     <a href="https://www.linkedin.com/in/airi-matsushita-774bb6244/" target="_blank">
-                    <img src="./icons8-linkedin-96-white.png" width="32" height="32"></a>
+                    <img src="icons8-linkedin-96-white.PNG" width="32" height="32"></a>
                 </div>
             </span>
         </div>
