--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
 
         if (isDarkMode) {
             element.className = "dark-mode";
-            modeIcon.src = "icons/sun_darkmode.png";
+            modeIcon.src = "icons/sun_darkmode.PNG";
             lightModeIcon.style.display = "none";
             darkModeIcon.style.display = "block";
             links.forEach(link => {
@@ -74,7 +74,7 @@
             });
         } else {
             element.className = "light-mode";
-            modeIcon.src = "icons/moon_lightmode.png";
+            modeIcon.src = "icons/moon_lightmode.PNG";
             lightModeIcon.style.display = "block";
             darkModeIcon.style.display = "none";
             links.forEach(link => {
@@ -96,7 +96,7 @@
 <body>
     <button onclick="toggleMode()" class="icon-light">
         <span class="icon-light">
-            <img id="mode-icon-img" src="icons/moon_lightmode.png" width="25" height="25">
+            <img id="mode-icon-img" src="icons/moon_lightmode.PNG" width="25" height="25">
         </span>
     </button>
     <nav class="nav-bar">
@@ -145,7 +145,7 @@
 
 <div class="icon">
     <a href = "./index.html">
-        <img src = "icons/home.png"
+        <img src = "icons/home.PNG"
         width = "25" height = "25"></a>
     </div>
 </body>
