--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 
             if (isDarkMode) {
                 element.className = "dark-mode";
-                modeIcon.src = "icons/sun_darkmode.PNG";
+                modeIcon.src = "sun_darkmode.PNG";
                 lightModeIcon.style.display = "none";
                 darkModeIcon.style.display = "block";
                 links.forEach(link => {
@@ -74,7 +74,7 @@
                 });
             } else {
                 element.className = "light-mode";
-                modeIcon.src = "icons/moon_lightmode.PNG";
+                modeIcon.src = "moon_lightmode.PNG";
                 lightModeIcon.style.display = "block";
                 darkModeIcon.style.display = "none";
                 links.forEach(link => {
@@ -96,7 +96,7 @@
     <body>
         <button onclick="toggleMode()" class="icon-light">
             <span class="icon-light">
-                <img id="mode-icon-img" src="icons/moon_lightmode.PNG" width="25" height="25">
+                <img id="mode-icon-img" src="moon_lightmode.PNG" width="25" height="25">
             </span>
         </button>
         <nav class="nav-bar">
@@ -122,8 +122,8 @@
             I created this website to introduce myself in a more fun way than 
             with just my resume. Feel free to explore around!
             <br>
-            <img src="pics/me.PNG" width="150" height="150">
-            <img src="pics/me2.PNG" width="150" height="150">
+            <img src="me.PNG" width="150" height="150">
+            <img src="me2.PNG" width="150" height="150">
         </p>
         <p>
             Aside from beeping and booping on my laptop, I am a violinist in 
@@ -134,7 +134,7 @@
             annual concerto competition. You can check out my performance on the  
             <a href="./music.html">music</a> page!
             <br>
-            <img src="pics/trio.PNG" width="150" height="150">
+            <img src="trio.PNG" width="150" height="150">
         </p>
         <p>
             Other interests include traveling, photography, night-drives, 
@@ -142,7 +142,7 @@
             and ☕. I am also a huuuge dog person and adore my miniature 
             schuauzer more than anything.
             <br>
-            <img src="pics/mimi.PNG" width="150" height="150">
+            <img src="mimi.PNG" width="150" height="150">
         </p>
         <p>
             I'm currently on the hunt for an internship, where my goal is to 
@@ -152,8 +152,8 @@
 		</p>
 		<br>
         <div class="icon">
-            <a href = "./index.html">
-                <img src = "icons/home.PNG"
+            <a href = "https://airimatt.github.io/">
+                <img src = "home.PNG"
                 width = "25" height = "25"></a>
         </div>
       </body>
