--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
 		</p>
 		<br>
         <div class="icon">
-            <a href = "https://airimatt.github.io/">
+            <a href = "https://airimatt.github.io">
                 <img src = "home.PNG"
                 width = "25" height = "25"></a>
         </div>
