--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <body>
         <button onclick="toggleMode()" class="icon-light">
             <span class="icon-light">
-                <img id="mode-icon-img" src="moon_lightmode.PNG" width="25" height="25">
+                <img id="mode-icon-img" src="moon_lightmode.png" width="25" height="25">
             </span>
         </button>
         
