--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <nav class="nav-bar">
                     <a style="text-decoration:none; color: #000000" href="./about.html"> about </a>
                     <!-- <a style="text-decoration:none" href="./resume.html"> resume </a> -->
-                    <a style="text-decoration:none; color: #000000" href="resume_.pdf"> resume </a>
+                    <a style="text-decoration:none; color: #000000" href="resume_2.pdf"> resume </a>
                     <a style="text-decoration:none; color: #000000" href="./projects.html"> projects </a>
                     <!-- <a style="text-decoration:none" href="./music.html"> music </a> -->
                     <a style="text-decoration:none; color: #000000" href="https://www.youtube.com/channel/UCccGJOzrD8qGoOSU9h4ZI-w"> music </a>
